--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: ["ubuntu-latest", "windows-latest", "macos-latest"]
-        python-version: ["3.12", "3.11"]
+        operating-system: ["ubuntu-latest"]
+        python-version: ["3.11"]
 
     steps:
       - name: Checkout code
@@ -24,15 +24,15 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+          cache: "pip"
           cache-dependency-path: setup.py
 
       - name: Install dependencies
         run: |
           python -m pip install -U pip setuptools wheel
           pip install -r requirements.txt
+          pip install -e .
           pip list
-
 
       - name: Run tests & coverage
         run: |
