add dvc to requirements.txt for datasets downloading for Github Actions

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -37,6 +37,9 @@ jobs:
           pip install -e .
           pip list
 
+      - name: Download datasets
+        run: dvc pull
+
       - name: Run tests & coverage
         run: |
           coverage run -m pytest tests/
