fix dvc by adding --force to remove .gitkeep file under data folder

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -38,7 +38,7 @@ jobs:
           pip list
 
       - name: Download datasets
-        run: dvc pull
+        run: dvc pull -v --force
 
       - name: Run tests & coverage
         run: |
