--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -42,5 +42,5 @@ jobs:
 
       - name: Run tests & coverage
         run: |
-          coverage run -m pytest -i --cache-clear tests/
-          coverage report -m
+          coverage run -m pytest tests/
+          coverage report -m -i
