--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-      - Boyang
-      - Lin
-      - Wenji
   pull_request:
     branches:
       - main
@@ -17,7 +14,7 @@ jobs:
     strategy:
       matrix:
         operating-system: ["ubuntu-latest"]
-        python-version: ["3.11"]
+        python-version: ["3.10.16", "3.11"]
 
     steps:
       - name: Checkout code
