--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -60,4 +60,4 @@ jobs:
         uses: google-github-actions/setup-gcloud@v2
 
       - name: Submit build
-        run: gcloud builds submit --config cloudbuild.yaml
+        run: gcloud builds submit --polling-interval=5 --region=europe-west1 --config cloudbuild.yaml --gcs-log-dir=gs://mlops-groupwork_cloudbuild/logs
