--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ "ubuntu-latest" ]
-        python-version: [ "3.10.16", "3.11" ]
+        python-version: [ "3.11" ]
 
     steps:
       - name: Checkout code
