--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ classifiers = [
 ]
 readme = "README.md"
 requires-python = ">=3.11"
+dynamic = ["optional-dependencies"]
+
+[tool.setuptools.dynamic.optional-dependencies]
+dev = { file = ['requirements_dev.txt'] }
 
 [tool.ruff]
 line-length = 120
