--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -39,17 +39,29 @@ steps:
     waitFor: [ 'Build docker image for api-service' ]
 
   - name: 'gcr.io/cloud-builders/gcloud'
+    id: 'Deploy model-training to Cloud Run'
+    args: [
+      'run',
+      'deploy',
+      'model-training',
+      '--image=europe-west1-docker.pkg.dev/$PROJECT_ID/mlops-docker-repo/model-training',
+      '--region=europe-west1',
+      '--platform=managed',
+      '--service-account=trained-models@mlops-groupwork.iam.gserviceaccount.com'
+      '--allow-unauthenticated',
+    ]
+    waitFor: [ 'Push docker image for model-training' ]
+
+  - name: 'gcr.io/cloud-builders/gcloud'
     id: 'Deploy api-service to Cloud Run'
     args: [
       'run',
       'deploy',
       'api-service',
-      '--image',
-      'europe-west1-docker.pkg.dev/$PROJECT_ID/mlops-docker-repo/api-service',
-      '--region',
-      'europe-west1',
-      '--platform',
-      'managed',
+      '--image=europe-west1-docker.pkg.dev/$PROJECT_ID/mlops-docker-repo/api-service',
+      '--region=europe-west1',
+      '--platform=managed',
+      '--service-account=trained-models@mlops-groupwork.iam.gserviceaccount.com'
       '--allow-unauthenticated',
     ]
     waitFor: [ 'Push docker image for api-service' ]
