fix training failed bug

--- a/.gitignore
+++ b/.gitignore
@@ -189,6 +189,13 @@ vertex_ai/
 .ruff_cache/
 wandb/
 keys/*keys/*.json
-
 # Key file for GCP buckets
 keys/*.json
+
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/MLOps.iml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
