--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,14 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 readme = "README.md"
-requires-python = ">=3.11"
-dynamic = ["optional-dependencies"]
+requires-python = ">=3.10"
+dynamic = ["dependencies", "optional-dependencies"]
+
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
 
 [tool.setuptools.dynamic.optional-dependencies]
-dev = { file = ['requirements_dev.txt'] }
+dev = {file = ['requirements_dev.txt']}
 
 [tool.ruff]
 line-length = 120
