--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,5 @@ tensorboard-data-server==0.7.2
 torch_tb_profiler==0.4.3
 werkzeug==3.1.3
 google-cloud-storage==2.11.0
-streamlit
 requests
+evidently
