--- a/docs/mkdocs.yaml
+++ b/docs/mkdocs.yaml
@@ -1,23 +1,58 @@
-site_name: mlops_project
+site_name: mlops-project-group88
 site_author: Lin zhu, Boyang Xu, Wenji Xie
 docs_dir: source
+
 
 theme:
   language: en
   name: material
   features:
-    - content.code.copy
-    - content.code.annotate
+    - navigation.tabs
+    - navigation.sections
+    - toc.integrate
+    - search.suggest
+  palette:
+    - scheme: default
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    - scheme: slate
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
 
-plugins:
-  - search
-  - mkdocstrings:
-      handlers:
-        python:
-          options:
-            show_root_heading: true
-            separate_signature: true
-            show_signature_annotations: true
 
 nav:
-  - Home: index.md
+  - Home: 
+    - documents/index.md
+  - Guide:
+    - documents/guide.md
+  - API documentation:
+    - documents/api.md
+  - About:
+    - documents/contributing.md
+
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - tables
+  - attr_list
+  - md_in_html
+
+plugins:
+- search
+- mkdocstrings:
+    handlers:
+      python:
+        options:
+          show_root_heading: true
+          separate_signature: true
+          show_signature_annotations: true
