--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -14,4 +14,6 @@ jobs:
         with:
           python-version: '3.x'
       - run: pip install mkdocs-material 
+      - run: pip install mkdocstrings
+      - run: pip install mkdocs
       - run: mkdocs gh-deploy --force
