--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -1,19 +1,32 @@
-name: Deploy MkDocs
+name: Deploy docs
+
 on:
-  push:
-    branches: 
-      - main
+push:
+    branches:
+        - main
+
 permissions:
-  contents: write
+    contents: write 
+
 jobs:
   deploy:
+    name: Deploy docs
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-      - run: pip install mkdocs-material 
-      - run: pip install mkdocstrings
-      - run: pip install mkdocs
-      - run: mkdocs gh-deploy --force
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.11
+        cache: 'pip'
+        cache-dependency-path: setup.py
+
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+
+    - name: Deploy docs
+      run: mkdocs gh-deploy --force
