--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -1,12 +1,12 @@
 name: Deploy docs
 
 on:
-push:
+  push:
     branches:
-        - main
+      - main
 
 permissions:
-    contents: write 
+  contents: write
 
 jobs:
   deploy:
@@ -15,18 +15,16 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: 3.11
         cache: 'pip'
-        cache-dependency-path: setup.py
+        cache-dependency-path: requirements.txt
 
     - name: Install dependencies
       run: pip install -r requirements.txt
 
     - name: Deploy docs
-      run: mkdocs gh-deploy --force
+      run: mkdocs gh-deploy
