--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -27,4 +27,4 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Deploy docs
-      run: mkdocs gh-deploy
+      run: mkdocs gh-deploy --force
